Quorum/Library/Tests/Templating/Pass/ProgramUsingEntryWithThreeTypes_2.quorum
class Main
    action Main
        Entry<integer,integer,integer> something
        something:doSomething1(5)
        something:doSomething2(10)
        something:doSomething3(15)
    end
end