Quorum/Library/Tests/Templating/Fail/DoubleTest.quorum
class Main 
    action Main
        B<integer, number> b
        A<number> a = b
    end
end